Fixed typo in content

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </p>
                     <p id="contact">
                         You can shoot me an <a class="hover-photo-text" href = "mailto: sebastianromerocruz@gmail.com">e-mail</a>, or find me on <a class="hover-photo-text"
-                            href="https://www.linkedin.com/in/sebastian-romerocruz/">LinkedIn</a> if you woud like.
+                            href="https://www.linkedin.com/in/sebastian-romerocruz/">LinkedIn</a> if you would like.
                     </p>
                     <p id="resume">
                         You can also check my résumé out <a class="hover-photo-text" href="/resources/cv.pdf">here</a>.
