Preliminary spider chart for music created with d3. Currently hudden by d-none class. Next up, animating it.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col-lg-6" id="linked-to-text">
                     <!-- Landing pictures -->
-                    <div class="img-container text-center pt-5">
+                    <div class="img-container text-center pt-5 d-none">
                         <img src="images/profile.jpg" alt="landing-picture" class="center-block landing-picture img-fluid">
                     </div>
 
@@ -315,6 +315,11 @@
                     <div class="map text-center d-none">
                         <svg id="d3-map" width="420" height="550"></svg>
                     </div>
+
+                    <!-- Music Spider Chart -->
+                    <div class="text-center">
+                        <svg id="d3-spider" width="600" height="600"></svg>
+                    </div>
                 </div>
 
             </div>
@@ -337,6 +342,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="index.js"></script>
     <script src="map.js"></script>
+    <script src="music-spider-chart.js"></script>
 </body>
 
 </html>
