Animated spider chart and refactored some of its respective code. Shows up as the active element at the moment. Will fix design and fully incorporate it to the rest of the site tomorrow.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col-lg-6" id="linked-to-text">
                     <!-- Landing pictures -->
-                    <div class="img-container text-center pt-5">
+                    <div class="img-container text-center pt-5 d-none">
                         <img src="images/profile.jpg" alt="landing-picture" class="center-block landing-picture img-fluid">
                     </div>
 
@@ -317,7 +317,7 @@
                     </div>
 
                     <!-- Music Spider Chart -->
-                    <div class="text-center d-none">
+                    <div class="text-center">
                         <svg id="d3-spider" width="600" height="600"></svg>
                     </div>
                 </div>
