--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <!-- Navbar -->
             <nav class="navbar navbar-expand-lg navbar-light">
                 <!-- Brand -->
-                <a class="navbar-brand" href="sebastianromerocruz.github.io"><i class="site-logo fas fa-ghost"></i></a>
+                <a class="navbar-brand" onClick="window.location.reload();"><i class="site-logo fas fa-ghost"></i></a>
 
                 <!-- Toggler -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,10 +86,10 @@
                             id="education">NYU</span>.
                     </p>
                     <p id="explanation">
-                        Quantitative as my training may be, I like to be as creative in my work as I can, gravitating towards more interactive fields such <span onclick="location='#linked-to-text'" class="hover-photo-text">data visualisation</span>.
+                        Quantitative as my training may be, I prefer to do work that lets me excel in visual and creative fields, such as data visualization.
                     </p>
                     <p id="hobbies">
-                        Outside of work, some of my interests involve learning other <span onclick="location='#linked-to-text'" class="hover-photo-text" id="japanese">languages</span>, music, and <span onclick="location='#linked-to-text'" class="hover-photo-text" id="kyudo">kyūdō</span>.
+                        Outside of work, some of my interests involve learning other <span onclick="location='#linked-to-text'" class="hover-photo-text" id="japanese">languages</span>, <span onclick="location='#linked-to-text'" class="hover-photo-text" id="music">music</span>, and <span onclick="location='#linked-to-text'" class="hover-photo-text" id="kyudo">kyūdō</span>.
                     </p>
                     <p id="contact">
                         You can shoot me an <a class="hover-photo-text" href = "mailto: sebastianromerocruz@gmail.com">e-mail</a>, or find me on <a class="hover-photo-text"
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col-lg-6" id="linked-to-text">
                     <!-- Landing pictures -->
-                    <div class="img-container text-center pt-5 d-none">
+                    <div class="img-container text-center pt-5">
                         <img src="images/profile.jpg" alt="landing-picture" class="center-block landing-picture img-fluid">
                     </div>
 
@@ -317,7 +317,8 @@
                     </div>
 
                     <!-- Music Spider Chart -->
-                    <div class="text-center">
+                    <div class="music text-center d-none">
+                        <h1>What can I play?</h1>
                         <svg id="d3-spider" width="600" height="600"></svg>
                     </div>
                 </div>
