--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
                     <!-- Japanese -->
                     <div class="japanese d-none">
-                        <h1>Hi, I'm <span class="hover-photo-text">Sebastián.</span> 🇯🇵</h1>
+                        <h1>Hi, I'm <span class="hover-photo-text">Sebastián.</span> (🇯🇵)</h1>
                         <p class="japanese-text">
                             NYCで、大学教授兼<span class="hover-photo-text japanese-text">開発者</span>として働いています。
                         </p>
@@ -297,13 +297,13 @@
                             私は<span class="hover-photo-text japanese-text">メキシコ</span>出身で、<span class="hover-photo-text japanese-text">ニューヨーク大学</span>において化学工学とコンピューター科学を、勉強しました。
                         </p>
                         <p class="japanese-text">
-                            専門は技術的でしたが、色々な分野からインスピレーションを取り入れて、できるだけクリエーティブにするのが好きです。
+                            専門は技術的でしたが、データの可視化など、できるだけ頑張れるビジュアルでクリエーティブな分野に仕事を好みます。
                         </p>
                         <p class="japanese-text">
-                            私の趣味は、<span class="hover-photo-text japanese-text" style="color: #ffc2c2; border-bottom: solid 0px;">外国語</span>の学習、音楽、そして弓道です。
+                            私の趣味は、<span class="hover-photo-text japanese-text" style="color: #ffc2c2; border-bottom: solid 0px;">外国語</span>の学習、<span class="hover-photo-text japanese-text">音楽</span>、そして<span class="hover-photo-text japanese-text">弓道</span>です。
                         </p>
                         <p class="japanese-text">
-                            使い捨てカメラを使ってますけど<a class="hover-photo-text japanese-text" href="https://www.instagram.com/ghstpkmn/">Instagram</a>も<a class="hover-photo-text japanese-text"
+                            <span class="hover-photo-text japanese-text">メール</span>でも、<a class="hover-photo-text japanese-text"
                                 href="https://www.linkedin.com/in/sebastian-romerocruz/">LinkedIn</a>もやっています。
                         </p>
                         <p class="japanese-text">
@@ -319,6 +319,7 @@
                     <!-- Music Spider Chart -->
                     <div class="music text-center d-none">
                         <h1>What can I play?</h1>
+                        <small>And how well?*</small>
                         <svg id="d3-spider" width="600" height="600"></svg>
                     </div>
                 </div>
