Fixed a bit of a bug in the spider chart

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                     <!-- Music Spider Chart -->
                     <div class="music text-center d-none">
                         <h1>What can I play?</h1>
-                        <small>And how well?*</small>
+                        <h4>And how well?*</h4>
                         <svg id="d3-spider" width="600" height="600"></svg>
                     </div>
                 </div>
