Uploaded new resume and changed the colour palette of d3 map

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
             <!-- Landing Page -->
             <div class="row">
                 <div class="col-lg-6 .d-flex .justify-content-center .align-items-center-center" id="text">
-                    <h1 id="title">Hi, I'm <span onclick="location='#linked-to-text'" class="hover-photo-text" id="profile">Sebastián.</span></h1>
+                    <!-- <h1 id="title">Hi, I'm <span onclick="location='#linked-to-text'" class="hover-photo-text" id="profile">Sebastián.</span></h1> -->
+                    <h1 id="title">Hi, I'm Sebastián.</h1>
                     <p id="intro">
                         I am a NYC-based professor and <span onclick="location='#linked-to-text'" class="hover-photo-text" id="technical-skills">developer</span>.
                     </p>
@@ -289,7 +290,7 @@
 
                     <!-- Japanese -->
                     <div class="japanese d-none">
-                        <h1>Hi, I'm <span class="hover-photo-text">Sebastián.</span> (🇯🇵)</h1>
+                        <h1>Hi, I'm Sebastián. (🇯🇵)</h1>
                         <p class="japanese-text">
                             NYCで、大学教授兼<span class="hover-photo-text japanese-text">開発者</span>として働いています。
                         </p>
