Added cards for each of the items on my resume for the third paragraph. Also fixed up some of the Japanese

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                     <div class="business-card">
                                         <i class="site-logo fas fa-ghost"></i> Sebastián Romero Cruz
                                         <br>
-                                        <i class="site-logo fas fa-envelope"></i> <a href = "mailto: sebastianromerocruz@gmail.com">sebastianromerocruz@gmail.com</a>
+                                        <i class="site-logo fas fa-envelope"></i> <a href="mailto: sebastianromerocruz@gmail.com">sebastianromerocruz@gmail.com</a>
                                         <br>
                                     </div>
                                 </div>
@@ -77,24 +77,25 @@
             <!-- Landing Page -->
             <div class="row">
                 <div class="col-lg-6 .d-flex .justify-content-center .align-items-center-center" id="text">
-                    <!-- <h1 id="title">Hi, I'm <span onclick="location='#linked-to-text'" class="hover-photo-text" id="profile">Sebastián.</span></h1> -->
                     <h1 id="title">Hi, I'm Sebastián.</h1>
                     <p id="intro">
-                        I am a NYC-based professor and <span onclick="location='#linked-to-text'" class="hover-photo-text" id="technical-skills">developer</span>.
+                        I am a NYC-based <span onclick="location='#linked-to-text'" class="hover-photo-text" id="technical-skills">developer</span> and <span onclick="location='#linked-to-text'" class="hover-photo-text" id="professor">professor</span>.
                     </p>
                     <p id="vocation">
-                        I was born in <span onclick="location='#linked-to-text'" class="hover-photo-text" id="mexico">Mexico City</span>, and later <span onclick="location='#linked-to-text'" class="hover-photo-text" id="moved">moved</span> to New York, where I studied at <span onclick="location='#linked-to-text'" class="hover-photo-text"
-                            id="education">NYU</span>.
+                        I was born in <span onclick="location='#linked-to-text'" class="hover-photo-text" id="mexico">Mexico City</span>, and later <span onclick="location='#linked-to-text'" class="hover-photo-text" id="moved">moved</span> to New
+                        York, where I studied at <span onclick="location='#linked-to-text'" class="hover-photo-text" id="education">NYU</span>.
                     </p>
                     <p id="explanation">
-                        Quantitative as my training may be, I prefer to do work that lets me excel in visual and creative fields, such as data visualization.
+                        Althought I prefer to do work that lets me excel in creative fields, such as data visualization, I also like to pull inspiration from <span class="hover-photo-text" id="skandinaviska">various</span> <span
+                            class="hover-photo-text" id="pitchfork">areas</span> of computer science.
                     </p>
                     <p id="hobbies">
-                        Outside of work, some of my interests involve learning other <span onclick="location='#linked-to-text'" class="hover-photo-text" id="japanese">languages</span>, <span onclick="location='#linked-to-text'" class="hover-photo-text" id="music">music</span>, and <span onclick="location='#linked-to-text'" class="hover-photo-text" id="kyudo">kyūdō</span>.
+                        Outside of work, some of my interests involve learning other <span onclick="location='#linked-to-text'" class="hover-photo-text" id="japanese">languages</span>, <span onclick="location='#linked-to-text'"
+                            class="hover-photo-text" id="music">music</span>, and <span onclick="location='#linked-to-text'" class="hover-photo-text" id="kyudo">kyūdō</span>.
                     </p>
                     <p id="contact">
-                        You can shoot me an <a class="hover-photo-text" href = "mailto: sebastianromerocruz@gmail.com">e-mail</a>, or find me on <a class="hover-photo-text"
-                            href="https://www.linkedin.com/in/sebastian-romerocruz/">LinkedIn</a> if you would like.
+                        You can shoot me an <a class="hover-photo-text" href="mailto: sebastianromerocruz@gmail.com">e-mail</a>, or find me on <a class="hover-photo-text" href="https://www.linkedin.com/in/sebastian-romerocruz/">LinkedIn</a> if you
+                        would like.
                     </p>
                     <p id="resume">
                         You can also check my résumé out <a class="hover-photo-text" href="/resources/cv.pdf">here</a>.
@@ -139,13 +140,13 @@
                             <div class="col-sm-10">
                                 <div class="row">
                                     <div class="col-sm-4">
-                                        <p class="ranking text-left">lo</p>
+                                        <p class="ranking text-left">prior exposure</p>
                                     </div>
                                     <div class="col-sm-4">
-                                        <p class="ranking text-center">med</p>
+                                        <p class="ranking text-center">intermediate</p>
                                     </div>
                                     <div class="col-sm-4">
-                                        <p class="ranking text-right">hi</p>
+                                        <p class="ranking text-right">fluent</p>
                                     </div>
                                 </div>
                                 <hr class="ranking-rule">
@@ -288,24 +289,69 @@
                         </div>
                     </div>
 
+                    <!-- <div class="experience d-none"> -->
+                        <div id="experience-professor" class=" professor d-none">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title exp-card-title">New York Univerity Tandon School of Engineering</h5>
+                                    <p class="card-text">Adjunct Professor</p>
+                                    <p class="exp-dates">Brooklyn, N.Y. (January 2020 — Present)</p>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i></li>
+                                    <li class="list-group-item">Instructing 6 laboratory sections of Python programming across a total of 227 students, providing them with practical application of lecture material.</li>
+                                    <li class="list-group-item">Holding biweekly homework help sessions as well as exam review sessions prior to every midterm and final exam.</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div id="experience-skan" class="skandinaviska d-none">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title exp-card-title">Skandinaviska Enskilda Banken (S.E.B.)</h5>
+                                    <p class="card-text">Data Science Intern</p>
+                                    <p class="exp-dates">New York, N.Y. (June 2019 – September 2019)</p>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i> <i class="fab fa-google fa-2x skill-logo exp-logo"></i></li>
+                                    <li class="list-group-item">Using the <strong>Google Places</strong> and <strong>OpenStreetMap</strong> APIs, developed a geocoding program capable of extracting the geometry of the physical assets of 100,000+ global companies across 11 sectors and 70 industries.</li>
+                                    <li class="list-group-item">Implemented appropriate pre-processing, filtering, and identity matching algorithms including a custom stop-word remover and a fuzzy-string token matching system towards refining the results.</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div id="experience-pitchfork" class="pitchfork d-none">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title exp-card-title">Pitchfork Review Sentiment Analysis</h5>
+                                    <p class="card-text">Project</p>
+                                    <p class="exp-dates">February 2019 – May 2019</p>
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i> <i class="fab fa-docker fa-2x skill-logo exp-logo"></i> <i class="fab fa-js-square fa-2x skill-logo exp-logo"></i></li>
+                                    <li class="list-group-item">Lead a team of 5 towards creating an automatic, fully scalable quantitative music scoring service using natural language processing (NLP) of 18,393 music reviews using <strong>Apache Spark</strong>.</li>
+                                    <li class="list-group-item">Developed a logistic regression machine-learning model that maximized the multi-class classification F-measure of the model to 0.383, improving on the original linear regression model</li>
+                                </ul>
+                            </div>
+                        </div>
+                    <!-- </div> -->
+
                     <!-- Japanese -->
                     <div class="japanese d-none">
                         <h1>Hi, I'm Sebastián. (🇯🇵)</h1>
                         <p class="japanese-text">
-                            NYCで、大学教授兼<span class="hover-photo-text japanese-text">開発者</span>として働いています。
+                            NYCで、<span class="hover-photo-text japanese-text">開発者</span>兼大学教授として働いています。
                         </p>
                         <p class="japanese-text">
                             私は<span class="hover-photo-text japanese-text">メキシコ</span>出身で、<span class="hover-photo-text japanese-text">ニューヨーク大学</span>において化学工学とコンピューター科学を、勉強しました。
                         </p>
                         <p class="japanese-text">
-                            専門は技術的でしたが、データの可視化など、できるだけ頑張れるビジュアルでクリエーティブな分野に仕事を好みます。
+                            データの可視化など、ビジュアルで創造的な分野で上達できる仕事が得意ですが、<span class="hover-photo-text">他</span>の<span class="hover-photo-text">色々</span>な<span class="hover-photo-text">領域</span>からインスピレーションを取り入れるのが好きです。
                         </p>
                         <p class="japanese-text">
-                            私の趣味は、<span class="hover-photo-text japanese-text" style="color: #ffc2c2; border-bottom: solid 0px;">外国語</span>の学習、<span class="hover-photo-text japanese-text">音楽</span>、そして<span class="hover-photo-text japanese-text">弓道</span>です。
+                            私の趣味は、<span class="hover-photo-text japanese-text" style="color: #ffc2c2; border-bottom: solid 0px;">外国語</span>の学習、<span class="hover-photo-text japanese-text">音楽</span>、そして<span
+                                class="hover-photo-text japanese-text">弓道</span>です。
                         </p>
                         <p class="japanese-text">
-                            <span class="hover-photo-text japanese-text">メール</span>でも、<a class="hover-photo-text japanese-text"
-                                href="https://www.linkedin.com/in/sebastian-romerocruz/">LinkedIn</a>もやっています。
+                            <span class="hover-photo-text japanese-text">メール</span>も、<a class="hover-photo-text japanese-text" href="https://www.linkedin.com/in/sebastian-romerocruz/">LinkedIn</a>もやっています。
                         </p>
                         <p class="japanese-text">
                             私の<span class="hover-photo-text japanese-text">履歴書</span>にご興味のある方はぜひご覧になって下さい。
