Fixed typo in third paragraph and deleted toggle in the navbar. It wasn't really necessary

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a class="navbar-brand" onClick="window.location.reload();"><i class="site-logo fas fa-ghost"></i></a>
 
                 <!-- Toggler -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </nav>
 
             <!-- Landing Page -->
@@ -86,7 +86,7 @@
                         York, where I studied at <span onclick="location='#linked-to-text'" class="hover-photo-text" id="education">NYU</span>.
                     </p>
                     <p id="explanation">
-                        Althought I prefer to do work that lets me excel in creative fields, such as data visualization, I also like to pull inspiration from <span class="hover-photo-text" id="skandinaviska">various</span> <span
+                        Although I prefer to do work that lets me excel in creative fields, such as data visualization, I also have experience in <span class="hover-photo-text" id="skandinaviska">other</span> <span
                             class="hover-photo-text" id="pitchfork">areas</span> of computer science.
                     </p>
                     <p id="hobbies">
@@ -344,7 +344,7 @@
                             私は<span class="hover-photo-text japanese-text">メキシコ</span>出身で、<span class="hover-photo-text japanese-text">ニューヨーク大学</span>において化学工学とコンピューター科学を、勉強しました。
                         </p>
                         <p class="japanese-text">
-                            データの可視化など、ビジュアルで創造的な分野で上達できる仕事が得意ですが、<span class="hover-photo-text">他</span>の<span class="hover-photo-text">色々</span>な<span class="hover-photo-text">領域</span>からインスピレーションを取り入れるのが好きです。
+                            データの可視化など、ビジュアルで創造的な分野で上達できる仕事に秀でますが、<span class="hover-photo-text">他</span>の<span class="hover-photo-text">領域</span>に経験もあります。
                         </p>
                         <p class="japanese-text">
                             私の趣味は、<span class="hover-photo-text japanese-text" style="color: #ffc2c2; border-bottom: solid 0px;">外国語</span>の学習、<span class="hover-photo-text japanese-text">音楽</span>、そして<span
