--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
@@ -38,56 +39,45 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <!-- Brand -->
                 <a class="navbar-brand" onClick="window.location.reload();"><i class="site-logo fas fa-ghost"></i></a>
+            </nav>
 
-                <!-- Toggler -->
-                <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarToggler">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="navbar-item">
-                            <a class="nav-link" data-toggle="modal" data-target="#contactModal">Contact</a>
-                        </li>
-                    </ul>
-
-                    <div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="contactModalTitle" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="contactModalTitle">Let's get in touch!</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <div class="business-card">
-                                        <i class="site-logo fas fa-ghost"></i> Sebastián Romero Cruz
-                                        <br>
-                                        <i class="site-logo fas fa-envelope"></i> <a href="mailto: sebastianromerocruz@gmail.com">sebastianromerocruz@gmail.com</a>
-                                        <br>
-                                    </div>
-                                </div>
-                            </div>
+            <!-- Mobile Size Window Modal -->
+            <div class="modal fade" id="mobileModal" tabindex="-1" role="dialog" aria-labelledby="mobileModalTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="mobileModalTitle">Welcome!</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            Thanks for checking my personal site out. I see that you're on mobile. Either that, or you've just resized your window to make it smaller. I'm currently optimizing to make this site work and respond well on mobile-sized /
+                            smaller screens, so it may not look its best at the moment. Still, I encourage you to check it out on larger screen sizes, and to check-in in the future for updates.
+                            Either way, thank you again for visiting!
+                        </div>
+                        <div class="modal-footer">
+                            —<em>Sebastián</em>
                         </div>
                     </div>
-                </div> -->
-            </nav>
+                </div>
+            </div>
 
             <!-- Landing Page -->
             <div class="row">
                 <div class="col-lg-6 .d-flex .justify-content-center .align-items-center-center" id="text">
                     <h1 id="title">Hi, I'm Sebastián.</h1>
                     <p id="intro">
-                        I am a NYC-based <span onclick="location='#linked-to-text'" class="hover-photo-text" id="technical-skills">developer</span> and <span onclick="location='#linked-to-text'" class="hover-photo-text" id="professor">professor</span>.
+                        I am a NYC-based <span onclick="location='#linked-to-text'" class="hover-photo-text" id="technical-skills">developer</span> and <span onclick="location='#linked-to-text'" class="hover-photo-text"
+                            id="professor">professor</span>.
                     </p>
                     <p id="vocation">
                         I was born in <span onclick="location='#linked-to-text'" class="hover-photo-text" id="mexico">Mexico City</span>, and later <span onclick="location='#linked-to-text'" class="hover-photo-text" id="moved">moved</span> to New
                         York, where I studied at <span onclick="location='#linked-to-text'" class="hover-photo-text" id="education">NYU</span>.
                     </p>
                     <p id="explanation">
-                        Although I prefer to do work that lets me excel in creative fields, such as data visualization, I also have experience in <span class="hover-photo-text" id="skandinaviska">other</span> <span
-                            class="hover-photo-text" id="pitchfork">areas</span> of computer science.
+                        Although I prefer to do work that lets me excel in creative fields, such as data visualization, I also have experience in <span class="hover-photo-text" id="skandinaviska">other</span> <span class="hover-photo-text"
+                            id="pitchfork">areas</span> of computer science.
                     </p>
                     <p id="hobbies">
                         Outside of work, some of my interests involve learning other <span onclick="location='#linked-to-text'" class="hover-photo-text" id="japanese">languages</span>, <span onclick="location='#linked-to-text'"
@@ -290,48 +280,51 @@
                     </div>
 
                     <!-- <div class="experience d-none"> -->
-                        <div id="experience-professor" class=" professor d-none">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title exp-card-title">New York Univerity Tandon School of Engineering</h5>
-                                    <p class="card-text">Adjunct Professor</p>
-                                    <p class="exp-dates">Brooklyn, N.Y. (January 2020 — Present)</p>
-                                </div>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i></li>
-                                    <li class="list-group-item">Instructing 6 laboratory sections of Python programming across a total of 227 students, providing them with practical application of lecture material.</li>
-                                    <li class="list-group-item">Holding biweekly homework help sessions as well as exam review sessions prior to every midterm and final exam.</li>
-                                </ul>
+                    <div id="experience-professor" class=" professor d-none">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title exp-card-title">New York Univerity Tandon School of Engineering</h5>
+                                <p class="card-text">Adjunct Professor</p>
+                                <p class="exp-dates">Brooklyn, N.Y. (January 2020 — Present)</p>
                             </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i></li>
+                                <li class="list-group-item">Instructing 6 laboratory sections of Python programming across a total of 227 students, providing them with practical application of lecture material.</li>
+                                <li class="list-group-item">Holding biweekly homework help sessions as well as exam review sessions prior to every midterm and final exam.</li>
+                            </ul>
                         </div>
-                        <div id="experience-skan" class="skandinaviska d-none">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title exp-card-title">Skandinaviska Enskilda Banken (S.E.B.)</h5>
-                                    <p class="card-text">Data Science Intern</p>
-                                    <p class="exp-dates">New York, N.Y. (June 2019 – September 2019)</p>
-                                </div>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i> <i class="fab fa-google fa-2x skill-logo exp-logo"></i></li>
-                                    <li class="list-group-item">Using the <strong>Google Places</strong> and <strong>OpenStreetMap</strong> APIs, developed a geocoding program capable of extracting the geometry of the physical assets of 100,000+ global companies across 11 sectors and 70 industries.</li>
-                                    <li class="list-group-item">Implemented appropriate pre-processing, filtering, and identity matching algorithms including a custom stop-word remover and a fuzzy-string token matching system towards refining the results.</li>
-                                </ul>
+                    </div>
+                    <div id="experience-skan" class="skandinaviska d-none">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title exp-card-title">Skandinaviska Enskilda Banken (S.E.B.)</h5>
+                                <p class="card-text">Data Science Intern</p>
+                                <p class="exp-dates">New York, N.Y. (June 2019 – September 2019)</p>
                             </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i> <i class="fab fa-google fa-2x skill-logo exp-logo"></i></li>
+                                <li class="list-group-item">Using the <strong>Google Places</strong> and <strong>OpenStreetMap</strong> APIs, developed a geocoding program capable of extracting the geometry of the physical assets of 100,000+ global
+                                    companies across 11 sectors and 70 industries.</li>
+                                <li class="list-group-item">Implemented appropriate pre-processing, filtering, and identity matching algorithms including a custom stop-word remover and a fuzzy-string token matching system towards refining the
+                                    results.</li>
+                            </ul>
                         </div>
-                        <div id="experience-pitchfork" class="pitchfork d-none">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title exp-card-title">Pitchfork Review Sentiment Analysis</h5>
-                                    <p class="card-text">Project</p>
-                                    <p class="exp-dates">February 2019 – May 2019</p>
-                                </div>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i> <i class="fab fa-docker fa-2x skill-logo exp-logo"></i> <i class="fab fa-js-square fa-2x skill-logo exp-logo"></i></li>
-                                    <li class="list-group-item">Lead a team of 5 towards creating an automatic, fully scalable quantitative music scoring service using natural language processing (NLP) of 18,393 music reviews using <strong>Apache Spark</strong>.</li>
-                                    <li class="list-group-item">Developed a logistic regression machine-learning model that maximized the multi-class classification F-measure of the model to 0.383, improving on the original linear regression model</li>
-                                </ul>
+                    </div>
+                    <div id="experience-pitchfork" class="pitchfork d-none">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title exp-card-title">Pitchfork Review Sentiment Analysis</h5>
+                                <p class="card-text">Project</p>
+                                <p class="exp-dates">February 2019 – May 2019</p>
                             </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i> <i class="fab fa-docker fa-2x skill-logo exp-logo"></i> <i class="fab fa-js-square fa-2x skill-logo exp-logo"></i></li>
+                                <li class="list-group-item">Lead a team of 5 towards creating an automatic, fully scalable quantitative music scoring service using natural language processing (NLP) of 18,393 music reviews using <strong>Apache
+                                        Spark</strong>.</li>
+                                <li class="list-group-item">Developed a logistic regression machine-learning model that maximized the multi-class classification F-measure of the model to 0.383, improving on the original linear regression model</li>
+                            </ul>
                         </div>
+                    </div>
                     <!-- </div> -->
 
                     <!-- Japanese -->
@@ -388,7 +381,7 @@
     <script src="https://d3js.org/d3-timer.v1.min.js"></script>
     <script src="https://d3js.org/d3-transition.v1.min.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
     <script src="index.js"></script>
     <script src="map.js"></script>
     <script src="music-spider-chart.js"></script>
