2022 update, including the new courses I am teaching.

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <div class="col-lg-6 .d-flex .justify-content-center .align-items-center-center" id="text">
                     <h1 id="title">Hi, I'm Sebastián.</h1>
                     <p id="intro">
-                        I am a NYC-based <span onclick="location='#linked-to-text'" class="hover-photo-text" id="technical-skills">developer</span> and <span onclick="location='#linked-to-text'" class="hover-photo-text"
-                            id="professor">professor</span>.
+                        I am a NYC-based <span onclick="location='#linked-to-text'" class="hover-photo-text"
+                            id="professor">computer science educator</span> and <span onclick="location='#linked-to-text'" class="hover-photo-text" id="technical-skills">developer</span>.
                     </p>
                     <p id="vocation">
                         I was born in <span onclick="location='#linked-to-text'" class="hover-photo-text" id="mexico">Mexico City</span>, and later <span onclick="location='#linked-to-text'" class="hover-photo-text" id="moved">moved</span> to New
@@ -83,15 +83,15 @@
                             class="hover-photo-text" id="music">music</span>, and <span onclick="location='#linked-to-text'" class="hover-photo-text" id="kyudo">kyūdō</span>.
                     </p>
                     <p id="contact">
-                        You can shoot me an <a class="hover-photo-text" href="mailto: sebastianromerocruz@gmail.com">e-mail</a>, or find me on <a class="hover-photo-text" href="https://www.linkedin.com/in/sebastian-romerocruz/">LinkedIn</a> if you
-                        would like.
+                        You can find me on <a class="hover-photo-text" href="https://github.com/sebastianromerocruz">GitHub</a> if you
+                        would like to check out my work, or shoot me an <a class="hover-photo-text" href="mailto: sebastianromerocruz@gmail.com">e-mail</a>.
                     </p>
                     <p id="resume">
-                        You can also check my résumé out <a class="hover-photo-text" href="/resources/cv.pdf">here</a>.
+                        You can also find me on LinkedIn <a class="hover-photo-text" href="https://www.linkedin.com/in/sebastian-romerocruz/">here</a> if you'd prefer.
                     </p>
 
                     <footer>
-                        <small class="footer-text">&copy; 2020 Sebastián Romero Cruz, <em class="footer-explanation" data-toggle="modal" data-target="#cabinetModal">Le Cabinet Historique</em>.</small>
+                        <small class="footer-text">&copy; 2022 Sebastián Romero Cruz, <em class="footer-explanation" data-toggle="modal" data-target="#cabinetModal">Le Cabinet Historique</em>.</small>
                     </footer>
 
                     <!-- Modal -->
@@ -279,19 +279,110 @@
                     </div>
 
                     <!-- <div class="experience d-none"> -->
-                    <div id="experience-professor" class=" professor d-none">
-                        <div class="card">
+                    <div id="experience-professor" class="professor d-none text-center">
+                        <div class="row">
+                            <div class="" id="msc">
+                                <div class="card card-body">
+                                    <div class="edu-header row align-items-center">
+                                        <div class="col-4">
+                                            <img src="images/nyu-logo.png" class="card-img-top nyu-logo rounded mx-auto d-block" alt="nyu-logo">
+                                        </div>
+                                        <div class="col-8">
+                                            <h5 class="card-title">New York University</h5>
+                                        </div>
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+                                            <span class="card-text" style="font-weight: bold; font-style: italic; display: block;">
+                                                Introduction to Problem Solving and Programming with Python
+                                            </span>
+                                            <span style="font-size: 0.75rem;">
+                                                Instructing 2 lecture sections and 6 laboratory sections, covering control flow structures, data structures, functional decomposition and style, IO, and object-oriented programming.
+                                                <span>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <span class="card-text" style="font-weight: bold; font-style: italic; display: block;">
+                                                Introduction to Game Programming
+                                            </span>
+                                            <span style="font-size: 0.75rem;">
+                                                Instructing the fundamentals of interactive computer games as cross-platform applications using C++ and the OpenGL library.
+                                                <span>
+                                        </li>
+                                    </ul>
+
+                                </div>
+
+                            </div>
+                            <div class="" id="bsc">
+                                <div class="card card-body">
+                                    <div class="row align-items-center">
+                                        <div class="col-4">
+                                            <img src="images/pace_logo.gif" class="card-img-top nyu-logo rounded mx-auto d-block" alt="nyu-logo">
+                                        </div>
+                                        <div class="col-8">
+                                            <h5 class="card-title">Pace University</h5>
+                                        </div>
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+                                            <span class="card-text" style="font-weight: bold; font-style: italic; display: block;">
+                                                Introduction to Computer Science with Java
+                                            </span>
+                                            <span style="font-size: 0.75rem;">
+                                                Instructing the fundamentals of programming, covering control flow structures, class inheritance, interfaces and polymorphism, the Java collection framework data types, and sorting and searching algorithms.
+                                                <span>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <span class="card-text" style="font-weight: bold; font-style: italic; display: block;">
+                                                Introduction to Computing
+                                            </span>
+                                            <span style="font-size: 0.75rem;">
+                                                Instructing 3 lecture sections across a total of 94 non-computer science students on MS Excel data management including pivot tables, What-If analyses, and data visualization methodology.
+                                                <span>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+                        <!-- <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title exp-card-title">New York Univerity Tandon School of Engineering</h5>
+                                <h5 class="card-title exp-card-title">NYU Tandon School of Engineering</h5>
                                 <p class="card-text">Adjunct Professor</p>
                                 <p class="exp-dates">Brooklyn, N.Y. (January 2020 — Present)</p>
                             </div>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i></li>
-                                <li class="list-group-item">Instructing 6 laboratory sections of Python programming across a total of 227 students, providing them with practical application of lecture material.</li>
-                                <li class="list-group-item">Holding biweekly homework help sessions as well as exam review sessions prior to every midterm and final exam.</li>
+                                <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i><p class="skill-logo skill-logo exp-logo" style="display:inline-block;">C++</p></li>
+                                <li class="list-group-item">
+                                    <span class="card-text" style="font-weight: bold; font-style: italic;">Intro to Problem Solving and Programming</span><br></br>
+
+                                    <span class="card-text">Instructing 2 lecture sections and 6 laboratory sections across a total of 200+ students, providing introductary practical application of Python programming.<span>
+                                </li>
+                                <li class="list-group-item">
+                                    <span style="font-weight: bold; font-style: italic;">Intro to Game Programming</span><br></br>
+
+                                    Instructing the fundamentals of interactive computer games as cross-platform applications using C++ and the OpenGL library.
+                                </li>
                             </ul>
-                        </div>
+                            <div class="card-body">
+                                <h5 class="card-title exp-card-title">Pace University</h5>
+                                <p class="card-text">Adjunct Professor</p>
+                                <p class="exp-dates">Brooklyn, N.Y. (January 2020 — Present)</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i><p class="skill-logo skill-logo exp-logo" style="display:inline-block;">C++</p></li>
+                                <li class="list-group-item">
+                                    <span class="card-text" style="font-weight: bold; font-style: italic;">Intro to Problem Solving and Programming</span><br></br>
+
+                                    <span class="card-text">Instructing 2 lecture sections and 6 laboratory sections across a total of 200+ students, providing introductary practical application of Python programming.<span>
+                                </li>
+                                <li class="list-group-item">
+                                    <span style="font-weight: bold; font-style: italic;">Intro to Game Programming</span><br></br>
+
+                                    Instructing the fundamentals of interactive computer games as cross-platform C++ applications using C++ and the OpenGL library.
+                                </li>
+                            </ul>
+                        </div> -->
                     </div>
                     <div id="experience-skan" class="skandinaviska d-none">
                         <div class="card">
