--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <!-- Required meta tags -->
+    <!-- Hoping this updates the site? -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
